--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -55,6 +55,29 @@
   </div>
 </section>
 </main>
+<section class="galeria">
+            
+  <div class="movil"><img src="C:\Users\Beba Cersósimo\Desktop\COMISION44585-CERSOSIMO\img\GALERIA\Equipo Soldador por Arco Modelo C-2.gif" alt="Equipo Soldador por Arco Modelo C-2"></div>
+ 
+  <div class="movil"><img src="C:\Users\Beba Cersósimo\Desktop\COMISION44585-CERSOSIMO\img\GALERIA\Equipo Soldador por Arco Modelo C-7b.jpg" alt="Equipo Soldador por Arco Modelo C-7b"></div>
+  <div class="gigante"><img src="C:\Users\Beba Cersósimo\Desktop\COMISION44585-CERSOSIMO\img\METROVIAS 3 (2).JPG" alt="METROVIAS 3 (2)"></div>
+  <div class="vertical"><img src="C:\Users\Beba Cersósimo\Desktop\COMISION44585-CERSOSIMO\img\GALERIA\METROVIAS_FUENTE-removebg-preview.png" alt="METROVIAS_FUENTE-removebg-preview"></div>
+  <div class="movil"><img src="C:\Users\Beba Cersósimo\Desktop\COMISION44585-CERSOSIMO\img\SOLDADORASPUNTO_DOS_COLORES.png" alt="SOLDADORASPUNTO_DOS_COLORES"></div>
+  <div class="vertical"><img src="C:\Users\Beba Cersósimo\Desktop\COMISION44585-CERSOSIMO\img\GALERIA\FOTO7.JPG" alt="FOTO7"></div>
+
+  <div><h5>TENEMOS CLIENTES FIELES QUE NOS ELIGEN SIEMPRE.
+  
+    <ul class="list-group">
+      <li class="list-group-item">Bernabé Hnos</li>
+      <li class="list-group-item">
+             Arquitectura del Agua</li>
+      <li class="list-group-item">Metrovias</li>
+     
+      <li class="list-group-item">Cocinas Morelli</li>
+      <li class="list-group-item">etc.</li>
+      </ul>
+  </h5></div>
+</section>
 </body>
 <footer>
     <h5 class="footer"> Dirección: Vétere 38- Lomas de Zamora-CP1842-Buenos Aires- Argentina</h5>
